# cute-layout-viz

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
assets/: BankConflict-B4pcDn6o.js  BankConflict-CP4CekSy.js  Complement-Bm_30bxK.js  Complement-BzP2N0NA.js  Composition-BDQQi8s5.js  Composition-DyjqzMuU.js  Division-CyZ0lEaT.js  Division-D4uSK9ZG.js  Layout-BUTM-o_t.js  Layout-D-maOshT.js  LayoutGrid-3uQWtmFK.js  LayoutGrid-BYEjgpLc.js  Product-B40ryfce.js  Product-DrwPYaAj.js  index-9jrtLTQY.css  index-B0A_Kdno.js  index-Brafjsha.js  index-BvU71WA_.js  index-BzDMSfb0.js  index-CXSMVNSi.js  index-C_EKS_nQ.css  index-CgB3LBse.js  index-CreHf1b3.js  index-CyG5ptUr.js  index-D3HuGLBB.css  index-D645y-C0.css  index-DQB_liRt.css  index-DUYL0MSO.js  index-Dfa8Gcbf.js  index-DlIT95vw.js  index-DnCRnCfy.css  index-asmn0ghP.css  index-f6dHBdSQ.js  index-lqWuzfeJ.css  pyodide-C1DYZR6V.js  pyodide-DHB4sC57.js  pyodide-DnLQs2a6.js  pyodide-GADaI8Wc.js
python/: .gitignore  README.md  __init__.py  composition.py  composition_visualizer.py  layout.py  layout_string_parser.py  layout_visualizer.py  pyproject.toml  utils.py  visualizer_utils.py
python/examples/: composition_visualizer_demo.py  layout_visualizer_demo.py
python/tests/: test_composition.py  test_layout_string_parser.py  test_utils.py
src/: App.css  App.tsx  global.d.ts  main.tsx
src/bridge/: index.ts  layoutBridge.ts  pyodide.ts  types.ts
src/components/: GitHubCorner.tsx  HeatmapControls.tsx  LayoutGrid.tsx  Navbar.tsx  OffsetCoordList.tsx
(+17 files in other folders)
